refactor(help section): change subscriber to contact

--- a/nodes/subscribers/klicktipp-subscriber-delete.html
+++ b/nodes/subscribers/klicktipp-subscriber-delete.html
@@ -23,7 +23,7 @@
 	    <dd>
 	        Expected object with the following properties:
 	        <ul>
-	            <li><code>subscriberId</code> - (Required) the subscriber's ID</li>
+	            <li><code>subscriberId</code> - (Required) the contact's ID</li>
 	        </ul>
 	    </dd>
 	</dl>
@@ -51,7 +51,7 @@
 	<h3>Node Status</h3>
 	<ul>
 	    <li><strong>Green (dot)</strong> - Contact was deleted successfully.</li>
-	    <li><strong>Red (ring)</strong> - Failed to delete subscriber (e.g., missing subscriber ID or API error).</li>
+	    <li><strong>Red (ring)</strong> - Failed to delete contact (e.g., missing contact ID or API error).</li>
 	</ul>
 </script>
 
