--- a/nodes/subscribers/klicktipp-subscriber-get.html
+++ b/nodes/subscribers/klicktipp-subscriber-get.html
@@ -23,7 +23,7 @@
 	    <dd>
 	        Expected object with the following properties:
 	        <ul>
-	            <li><code>subscriberId</code> - (Required) the subscriber's ID</li>
+	            <li><code>subscriberId</code> - (Required) the contact's ID</li>
 	        </ul>
 	    </dd>
 	</dl>
@@ -34,7 +34,7 @@
 	   <dd>
 		   On success:
 		   <ul>
-			   <li>An object containing the subscriber's details</li>
+			   <li>An object containing the contact's details</li>
 		   </ul>
 	   </dd>
 	   <dd>
@@ -51,7 +51,7 @@
 	<h3>Node Status</h3>
 	<ul>
 	    <li><strong>Green (dot)</strong> - Contact information fetched successfully.</li>
-	    <li><strong>Red (ring)</strong> - Failed to fetch subscriber information (e.g., missing subscriber ID or API error).</li>
+	    <li><strong>Red (ring)</strong> - Failed to fetch contact information (e.g., missing contact ID or API error).</li>
 	</ul>
 </script>
 
