--- a/nodes/subscribers/klicktipp-subscriber-index.html
+++ b/nodes/subscribers/klicktipp-subscriber-index.html
@@ -18,7 +18,7 @@
 	   <dd>
 		   On success:
 		   <ul>
-			   <li>An array containing the subscriber IDs of all active subscribers.</li>
+			   <li>An array containing the contact IDs of all active contacts.</li>
 		   </ul>
 	   </dd>
 	   <dd>
@@ -34,8 +34,8 @@
 
 	<h3>Node Status</h3>
 	<ul>
-	    <li><strong>Green (dot)</strong> - Successfully fetched the subscriber list.</li>
-	    <li><strong>Red (ring)</strong> - Failed to fetch subscribers (e.g., API error).</li>
+	    <li><strong>Green (dot)</strong> - Successfully fetched the contact list.</li>
+	    <li><strong>Red (ring)</strong> - Failed to fetch contacts (e.g., API error).</li>
 	</ul>
 </script>
 
