--- a/nodes/subscribers/klicktipp-subscriber-search.html
+++ b/nodes/subscribers/klicktipp-subscriber-search.html
@@ -23,7 +23,7 @@
 	    <dd>
 	        Expected object with the following properties:
 	        <ul>
-	            <li><code>email</code> - (Required) the subscriber's email address</li>
+	            <li><code>email</code> - (Required) the contact's email address</li>
 	        </ul>
 	    </dd>
 	</dl>
@@ -34,7 +34,7 @@
 	   <dd>
 		   On success:
 		   <ul>
-			   <li>An object containing the subscriber's details (e.g., subscriber ID) if found.</li>
+			   <li>An object containing the contact's details (e.g., contact ID) if found.</li>
 		   </ul>
 	   </dd>
 	   <dd>
@@ -50,8 +50,8 @@
 
 	<h3>Node Status</h3>
 	<ul>
-	    <li><strong>Green (dot)</strong> - Contact search was successful, and the subscriber ID was retrieved.</li>
-	    <li><strong>Red (ring)</strong> - Failed to search for subscriber (e.g., missing email or API error).</li>
+	    <li><strong>Green (dot)</strong> - Contact search was successful, and the contact ID was retrieved.</li>
+	    <li><strong>Red (ring)</strong> - Failed to search for contact (e.g., missing email or API error).</li>
 	</ul>
 </script>
 
