--- a/nodes/subscribers/klicktipp-subscriber-subscribe.html
+++ b/nodes/subscribers/klicktipp-subscriber-subscribe.html
@@ -42,8 +42,8 @@
 	    <dd>
 	        Expected object with the following properties:
 	        <ul>
-	            <li><code>email</code> - (Optional) the subscriber's email address</li>
-	            <li><code>smsNumber</code> - (Optional) the subscriber's mobile number</li>
+	            <li><code>email</code> - (Optional) the contact's email address</li>
+	            <li><code>smsNumber</code> - (Optional) the contact's mobile number</li>
 	            <li><code>listId</code> - (Optional) the ID of a opt-in process</li>
 	            <li><code>tagId</code> - (Optional) the ID of a manual tag or SmartLink</li>
 	            <li><code>fields</code> - (Optional) an object with data fields (e.g., first name, last name, address, etc.),
@@ -58,7 +58,7 @@
 	       <dd>
 	           On success:
 	           <ul>
-	               <li>An object representing the subscriber that was created.</li>
+	               <li>An object representing the contact that was created.</li>
 	           </ul>
 	       </dd>
 	       <dd>
