--- a/nodes/subscribers/klicktipp-subscriber-tag.html
+++ b/nodes/subscribers/klicktipp-subscriber-tag.html
@@ -27,7 +27,7 @@
 	    <dd>
 	        Expected object with the following properties:
 	        <ul>
-	            <li><code>email</code> - (Required) the subscriber's email address</li>
+	            <li><code>email</code> - (Required) the contact's email address</li>
 	            <li><code>tagIds</code> - (Required) The ID of a manual tag or SmartLink.
 	            	You can also pass an array of tag IDs to assign multiple tags at once.
 	            	If a single tag ID is provided, it will be automatically placed in an array.
