--- a/nodes/subscribers/klicktipp-subscriber-tagged.html
+++ b/nodes/subscribers/klicktipp-subscriber-tagged.html
@@ -33,7 +33,7 @@
 	   <dd>
 		   On success:
 		   <ul>
-			   <li>An array of subscriber IDs that are associated with the provided tag ID.</li>
+			   <li>An array of contact IDs that are associated with the provided tag ID.</li>
 		   </ul>
 	   </dd>
 	   <dd>
@@ -49,8 +49,8 @@
 
 	<h3>Node Status</h3>
 	<ul>
-	    <li><strong>Green (dot)</strong> - Successfully retrieved subscribers tagged with the provided tag ID.</li>
-	    <li><strong>Red (ring)</strong> - Failed to retrieve subscribers, either due to missing tag ID or an API request failure.</li>
+	    <li><strong>Green (dot)</strong> - Successfully retrieved contacts tagged with the provided tag ID.</li>
+	    <li><strong>Red (ring)</strong> - Failed to retrieve contacts, either due to missing tag ID or an API request failure.</li>
 	</ul>
 </script>
 
