--- a/nodes/subscribers/klicktipp-subscriber-unsubscribe.html
+++ b/nodes/subscribers/klicktipp-subscriber-unsubscribe.html
@@ -23,7 +23,7 @@
 	    <dd>
 	        Expected object with the following properties:
 	        <ul>
-	            <li><code>email</code> - (Required) the subscriber's email address</li>
+	            <li><code>email</code> - (Required) the contact's email address</li>
 	        </ul>
 	    </dd>
 	</dl>
