--- a/nodes/subscribers/klicktipp-subscriber-untag.html
+++ b/nodes/subscribers/klicktipp-subscriber-untag.html
@@ -27,7 +27,7 @@
 	    <dd>
 	        Expected object with the following properties:
 	        <ul>
-	            <li><code>email</code> - (Required) the subscriber's email address</li>
+	            <li><code>email</code> - (Required) the contact's email address</li>
 	            <li><code>tagId</code> - (Required) the ID of a manual tag or SmartLink</li>
 	        </ul>
 	    </dd>
