--- a/nodes/subscription-processes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/subscription-processes/klicktipp-subscription-process-get-redirect.html
@@ -28,7 +28,7 @@
 	   Expected object with the following properties:
 	   <ul>
 		   <li><code>listId</code> - (Required) the ID of a opt-in process</li>
-		   <li><code>email</code> - (Required) the subscriber's email address</li>
+		   <li><code>email</code> - (Required) the contact's email address</li>
 	   </ul>
 	</dd>
 	</dl>
@@ -39,7 +39,7 @@
 		<dd>
 			On success:
 			<ul>
-				<li>The URL to which the subscriber will be redirected for the specified opt-in process.</li>
+				<li>The URL to which the contact will be redirected for the specified opt-in process.</li>
 			</ul>
 		</dd>
 		<dd>
