--- a/nodes/fields/klicktipp-field-get.html
+++ b/nodes/fields/klicktipp-field-get.html
@@ -1,16 +1,29 @@
 <script type="text/x-red" data-template-name="klicktipp-field-get">
 	<div class="form-row">
-			<label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-			<input type="text" id="node-input-name" placeholder="Enter node name">
+	    <label for="node-input-name">
+	      <i class="fa fa-tag"></i> <span>Name</span>
+	    </label>
+	    <input type="text" id="node-input-name" placeholder="Enter node name">
 	</div>
 	<div class="form-row">
-			<label for="node-input-klicktipp"><i class="fa fa-cog"></i> <span>KlickTipp Config</span></label>
-			<input type="text" id="node-input-klicktipp" data-i18n="config node">
+	    <label for="node-input-klicktipp">
+	      <i class="fa fa-cog"></i> <span>KlickTipp Config</span>
+	    </label>
+	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
-			<div class="form-row">
-						<label for="node-input-apiFieldId"><i class="fa fa-tag"></i> <span>Data Field</span></label>
-						<select id="node-input-apiFieldId"></select>
-			</div>
+	<div class="form-row" style="display: flex; align-items: center;">
+	  <label style="flex: 0 0 auto;" for="node-input-apiFieldId">
+	    <i class="fa fa-tag"></i> <span>Data Field</span>
+	  </label>
+	  <div style="flex: 1; display: flex; margin-left: 4px">
+	    <select id="node-input-apiFieldId" style="flex: 1;"></select>
+	    <input type="text" id="node-input-apiFieldIdManual" style="flex: 1; display: none;" placeholder="Enter field ID">
+	  </div>
+	  <div style="display: flex; flex-direction: row; align-items: center; width: 50px; margin-left: 10px;">
+	     <div>Map</div>
+	     <input style="margin-top: 0 !important;" type="checkbox" id="node-input-toggleFieldType">
+	  </div>
+	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-field-get">
@@ -59,16 +72,11 @@
 		category: 'KlickTipp',
 		color: '#DAE1FC',
 		defaults: {
-			klicktipp: {
-				type: 'klicktipp-config',
-				required: true,
-			},
-			apiFieldId: {
-				value: '',
-			},
-			name: {
-				value: '',
-			},
+			klicktipp: { type: 'klicktipp-config', required: true },
+			apiFieldId: { value: '' },
+			manualApiFieldId: { value: '' },
+			manualFieldEnabled: { value: false },
+			name: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
@@ -82,18 +90,77 @@
 			ktPopulateConfig(this);
 		},
 		oneditprepare: function () {
-			const klicktippInput = $('#node-input-klicktipp');
-			const fieldDropdown = $('#node-input-apiFieldId');
-			ktBindDropdownToInput(
-				klicktippInput,
-				fieldDropdown,
-				this.apiFieldId,
-				this.klicktipp,
-				`/klicktipp/contact-fields/${this.id}`,
-			);
+			var self = this;
+			const toggle = $('#node-input-toggleFieldType');
+			const select = $('#node-input-apiFieldId');
+			const manualIn = $('#node-input-apiFieldIdManual');
+
+			// Bind change event: show manual input if checked, otherwise show select.
+			toggle.on('change', function () {
+				if (toggle.prop('checked')) {
+					manualIn.show();
+					select.hide();
+				} else {
+					manualIn.hide();
+					select.show();
+					// If switching to select mode and the dropdown isn’t populated, bind it.
+					if (!select.children().length) {
+						const klicktippInput = $('#node-input-klicktipp');
+						ktBindDropdownToInput(
+							klicktippInput,
+							select,
+							self.apiFieldId,
+							self.klicktipp,
+							`/klicktipp/contact-fields/${self.id}`,
+						);
+					}
+				}
+			});
+
+			// Function to enforce the display state based on persisted configuration.
+			const forceToggleState = function () {
+				const isManual = self.manualFieldEnabled === true || self.manualFieldEnabled === 'true';
+				toggle.prop('checked', isManual);
+				if (isManual) {
+					manualIn.show();
+					select.hide();
+					manualIn.val(self.manualApiFieldId);
+				} else {
+					manualIn.hide();
+					select.show();
+				}
+				toggle.trigger('change');
+			};
+
+			// Only bind the dropdown if manual mode is off.
+			if (!(self.manualFieldEnabled === true || self.manualFieldEnabled === 'true')) {
+				const klicktippInput = $('#node-input-klicktipp');
+				ktBindDropdownToInput(
+					klicktippInput,
+					select,
+					self.apiFieldId,
+					self.klicktipp,
+					`/klicktipp/contact-fields/${self.id}`,
+				);
+			}
+
+			// Enforce state immediately and again after a delay.
+			forceToggleState();
+			setTimeout(forceToggleState, 200);
 		},
 		oneditsave: function () {
-			this.apiFieldId = Number($('#node-input-apiFieldId').val());
+			const manualEnabled = $('#node-input-toggleFieldType').is(':checked');
+			this.manualFieldEnabled = manualEnabled;
+			if (manualEnabled) {
+				const manualVal = $('#node-input-apiFieldIdManual').val();
+				this.manualApiFieldId = manualVal;
+				// Store the manual value in apiFieldId so that runtime picks it up.
+				this.apiFieldId = manualVal;
+			} else {
+				const selectVal = $('#node-input-apiFieldId').val();
+				this.apiFieldId = selectVal;
+				this.manualApiFieldId = '';
+			}
 		},
 	});
 </script>
