--- a/nodes/subscribers/klicktipp-subscriber-subscribe.html
+++ b/nodes/subscribers/klicktipp-subscriber-subscribe.html
@@ -1,34 +1,53 @@
 <script type="text/x-red" data-template-name="klicktipp-subscriber-subscribe">
 	<div class="form-row">
-			<label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-			<input type="text" id="node-input-name" placeholder="Enter node name">
+		<label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+		<input type="text" id="node-input-name" placeholder="Enter node name">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-klicktipp"><i class="fa fa-cog"></i> <span>KlickTipp Config</span></label>
-	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
+		<label for="node-input-klicktipp"><i class="fa fa-cog"></i> <span>KlickTipp Config</span></label>
+		<input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
-	    <input type="text" id="node-input-email" placeholder="Enter email address">
-	    <input type="hidden" id="node-input-emailType">
+		<label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
+		<input type="text" id="node-input-email" placeholder="Enter email address">
+		<input type="hidden" id="node-input-emailType">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-smsNumber"><i class="fa fa-mobile"></i> <span>SMS Number</span></label>
-	    <input type="text" id="node-input-smsNumber" placeholder="Enter SMS number">
-	     <input type="hidden" id="node-input-smsNumberType">
+		<label for="node-input-smsNumber"><i class="fa fa-mobile"></i> <span>SMS Number</span></label>
+		<input type="text" id="node-input-smsNumber" placeholder="Enter SMS number">
+		<input type="hidden" id="node-input-smsNumberType">
+	</div>
+	<!-- Dual input for Opt-in Process (listId) -->
+	<div class="form-row" style="display: flex; align-items: center;">
+		<label style="flex: 0 0 auto;" for="node-input-listId">
+			<i class="fa fa-tags"></i> <span>Opt-in Process</span>
+		</label>
+		<div style="flex: 1; display: flex; margin-left: 4px;">
+			<select id="node-input-listId" style="flex: 1;"></select>
+			<input type="text" id="node-input-listIdManual" style="flex: 1; display: none;" placeholder="Enter process ID">
+		</div>
+		<div style="display: flex; flex-direction: row; align-items: center; width: 50px; margin-left: 10px;">
+			<div>Map</div>
+			<input type="checkbox" id="node-input-toggleListId" style="margin-top:0 !important;">
+		</div>
+	</div>
+	<div class="form-row" style="display: flex; align-items: center;">
+		<label style="flex: 0 0 auto;" for="node-input-tagId">
+			<i class="fa fa-tag"></i> <span>Tag</span>
+		</label>
+		<div style="flex: 1; display: flex; margin-left: 4px;">
+			<select id="node-input-tagId" style="flex: 1;"></select>
+			<input type="text" id="node-input-tagIdManual" style="flex: 1; display: none;" placeholder="Enter tag ID">
+		</div>
+		<div style="display: flex; flex-direction: row; align-items: center; width: 50px; margin-left: 10px;">
+			<div>Map</div>
+			<input type="checkbox" id="node-input-toggleTagId" style="margin-top:0 !important;">
+		</div>
 	</div>
 	<div class="form-row">
-	       <label for="node-input-listId"><i class="fa fa-tags""></i> <span>Opt-in Process</span></label>
-	       <select id="node-input-listId"></select>
-	   </div>
-	   <div class="form-row">
-	       <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tag</span></label>
-	       <select id="node-input-tagId"></select>
-	   </div>
-	<div class="form-row">
-	    <label for="node-input-fields"><i class="fa fa-list"></i> <span>Data Fields</span></label>
-	    <input type="text" id="node-input-fields" placeholder="Data fields">
-	    <input type="hidden" id="node-input-fieldsType">
+		<label for="node-input-fields"><i class="fa fa-list"></i> <span>Data Fields</span></label>
+		<input type="text" id="node-input-fields" placeholder="Data fields">
+		<input type="hidden" id="node-input-fieldsType">
 	</div>
 	<div id="contact-fields-section" class="form-row" style="display: none"></div>
 </script>
@@ -89,44 +108,49 @@
 				value: 'payload.email',
 				validate: RED.validators.typedInput('emailType'),
 			},
-			emailType: {
-				value: 'msg',
-			},
+			emailType: { value: 'msg' },
 			smsNumber: {
 				value: 'payload.smsNumber',
 				validate: RED.validators.typedInput('smsNumberType'),
 			},
-			smsNumberType: {
-				value: 'msg',
-			},
+			smsNumberType: { value: 'msg' },
+			// For the opt-in process select:
 			listId: {
 				value: '',
 				validate: function (value) {
-					return value === '' || RED.validators.number()(value); // Allows empty value
+					return value === '' || RED.validators.number()(value);
 				},
 			},
+			manualListId: {
+				value: '',
+				validate: function (v) {
+					return v === '' || RED.validators.number()(v);
+				},
+			},
+			manualListEnabled: { value: false },
+			// For the tag select:
 			tagId: {
 				value: '',
 				validate: function (value) {
-					return value === '' || RED.validators.number()(value); // Allows empty value
+					return value === '' || RED.validators.number()(value);
 				},
 			},
+			manualTagId: {
+				value: '',
+				validate: function (v) {
+					return v === '' || RED.validators.number()(v);
+				},
+			},
+			manualTagEnabled: { value: false },
 			fields: {
 				value: 'payload.fields',
 				validate: function (v) {
-					// Allow empty values
 					return v === '' || v === undefined || RED.validators.typedInput('fieldsType')(v);
 				},
 			},
-			fieldsType: {
-				value: 'msg',
-			},
-			fieldsData: {
-				value: {},
-			},
-			name: {
-				value: '',
-			},
+			fieldsType: { value: 'msg' },
+			fieldsData: { value: {} },
+			name: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
@@ -140,12 +164,18 @@
 			ktPopulateConfig(this);
 		},
 		oneditprepare: function () {
+			var self = this;
 			const klicktippInput = $('#node-input-klicktipp');
 			const fieldsInput = $('#node-input-fields');
-
-			this.tagDropdown = $('#node-input-tagId');
-			this.listIdDropdown = $('#node-input-listId');
-			this.contactFieldsSection = $('#contact-fields-section');
+			// For opt-in process field:
+			const listIdDropdown = $('#node-input-listId');
+			const listIdManual = $('#node-input-listIdManual');
+			const listToggle = $('#node-input-toggleListId');
+			// For tag field:
+			const tagDropdown = $('#node-input-tagId');
+			const tagManual = $('#node-input-tagIdManual');
+			const tagToggle = $('#node-input-toggleTagId');
+			const contactFieldsSection = $('#contact-fields-section');
 
 			// Initialize typed inputs
 			ktInitializeTypedInput('#node-input-email', '#node-input-emailType', 'str', ['str']);
@@ -155,46 +185,138 @@
 				KT_CUSTOM_CONTACT_FIELDS_TYPE,
 			]);
 
-			// Bind dropdowns for tags and lists
-			ktBindDropdownToInput(
-				klicktippInput,
-				this.tagDropdown,
-				this.tagId,
-				this.klicktipp,
-				`/klicktipp/tags/${this.id}`,
-			);
-			ktBindDropdownToInput(
-				klicktippInput,
-				this.listIdDropdown,
-				this.listId,
-				this.klicktipp,
-				`/klicktipp/subscription-processes/${this.id}`,
-			);
-
 			// Initialize the contact fields section logic
 			ktInitializeContactFieldsSection(
 				fieldsInput,
-				this.contactFieldsSection,
+				contactFieldsSection,
 				klicktippInput,
-				this.fieldsData,
-				this.id,
+				self.fieldsData,
+				self.id,
 			);
-
-			// Initialize the select handler with user change detection
 			ktInitializeUserSelectHandler(
 				klicktippInput,
 				'#node-input-fieldsType',
-				this.contactFieldsSection,
-				this.fieldsData,
-				this.id,
+				contactFieldsSection,
+				self.fieldsData,
+				self.id,
 			);
+
+			// --- Dual input for listId ---
+			listToggle.on('change', function () {
+				if (listToggle.prop('checked')) {
+					listIdManual.show();
+					listIdDropdown.hide();
+				} else {
+					listIdManual.hide();
+					listIdDropdown.show();
+					if (!listIdDropdown.children().length) {
+						ktBindDropdownToInput(
+							klicktippInput,
+							listIdDropdown,
+							self.listId,
+							self.klicktipp,
+							`/klicktipp/subscription-processes/${self.id}`,
+						);
+					}
+				}
+			});
+			const forceListToggleState = function () {
+				// Hide both first
+				listIdManual.hide();
+				listIdDropdown.hide();
+				const isManual = self.manualListEnabled === true || self.manualListEnabled === 'true';
+				listToggle.prop('checked', isManual);
+				if (isManual) {
+					listIdManual.show();
+					listIdManual.val(self.manualListId);
+				} else {
+					listIdDropdown.show();
+				}
+				listToggle.trigger('change');
+			};
+			if (!(self.manualListEnabled === true || self.manualListEnabled === 'true')) {
+				ktBindDropdownToInput(
+					klicktippInput,
+					listIdDropdown,
+					self.listId,
+					self.klicktipp,
+					`/klicktipp/subscription-processes/${self.id}`,
+				);
+			}
+			forceListToggleState();
+			setTimeout(forceListToggleState, 200);
+
+			// --- Dual input for tagId ---
+			tagToggle.on('change', function () {
+				if (tagToggle.prop('checked')) {
+					tagManual.show();
+					tagDropdown.hide();
+				} else {
+					tagManual.hide();
+					tagDropdown.show();
+					if (!tagDropdown.children().length) {
+						ktBindDropdownToInput(
+							klicktippInput,
+							tagDropdown,
+							self.tagId,
+							self.klicktipp,
+							`/klicktipp/tags/${self.id}`,
+						);
+					}
+				}
+			});
+			const forceTagToggleState = function () {
+				// Hide both first
+				tagManual.hide();
+				tagDropdown.hide();
+				const isManual = self.manualTagEnabled === true || self.manualTagEnabled === 'true';
+				tagToggle.prop('checked', isManual);
+				if (isManual) {
+					tagManual.show();
+					tagManual.val(self.manualTagId);
+				} else {
+					tagDropdown.show();
+				}
+				tagToggle.trigger('change');
+			};
+			if (!(self.manualTagEnabled === true || self.manualTagEnabled === 'true')) {
+				ktBindDropdownToInput(
+					klicktippInput,
+					tagDropdown,
+					self.tagId,
+					self.klicktipp,
+					`/klicktipp/tags/${self.id}`,
+				);
+			}
+			forceTagToggleState();
+			setTimeout(forceTagToggleState, 200);
 		},
 		oneditsave: function () {
-			// Use the previously set common variables
-			this.tagId = Number(this.tagDropdown.val()); // Save the selected tagId
-			this.listId = Number(this.listIdDropdown.val()); // Save the selected listId
-
-			// Collect all field from API vales and store them in this.fieldsData
+			// Save listId value based on toggle
+			const listManualEnabled = $('#node-input-toggleListId').is(':checked');
+			this.manualListEnabled = listManualEnabled;
+			if (listManualEnabled) {
+				const manualVal = $('#node-input-listIdManual').val();
+				this.manualListId = manualVal;
+				this.listId = Number(manualVal);
+			} else {
+				const selectVal = $('#node-input-listId').val();
+				this.listId = Number(selectVal);
+				this.manualListId = '';
+			}
+			// Save tagId value based on toggle
+			const tagManualEnabled = $('#node-input-toggleTagId').is(':checked');
+			this.manualTagEnabled = tagManualEnabled;
+			if (tagManualEnabled) {
+				const manualVal = $('#node-input-tagIdManual').val();
+				this.manualTagId = manualVal;
+				this.tagId = Number(manualVal);
+			} else {
+				const selectVal = $('#node-input-tagId').val();
+				this.tagId = Number(selectVal);
+				this.manualTagId = '';
+			}
+			// Save contact fields values
 			this.fieldsData = ktSaveContactFieldValues(this.contactFieldsSection);
 		},
 	});
