--- a/nodes/subscription-processes/klicktipp-subscription-process-get.html
+++ b/nodes/subscription-processes/klicktipp-subscription-process-get.html
@@ -1,32 +1,43 @@
 <script type="text/x-red" data-template-name="klicktipp-subscription-process-get">
 	<div class="form-row">
-		  <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-		  <input type="text" id="node-input-name" placeholder="Enter node name">
+		<label for="node-input-name">
+			<i class="fa fa-tag"></i> <span>Name</span>
+		</label>
+		<input type="text" id="node-input-name" placeholder="Enter node name">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-klicktipp"><i class="fa fa-cog"></i> <span>KlickTipp Config</span></label>
-	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
+		<label for="node-input-klicktipp">
+			<i class="fa fa-cog"></i> <span>KlickTipp Config</span>
+		</label>
+		<input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
-	<div class="form-row">
-			<label for="node-input-listId"><i class="fa fa-tags""></i> <span>Opt-in Process</span></label>
-			<select id="node-input-listId"></select>
+	<div class="form-row" style="display: flex; align-items: center;">
+		<label style="flex: 0 0 auto;" for="node-input-listId">
+			<i class="fa fa-tags"></i> <span>Opt-in Process</span>
+		</label>
+		<div style="flex: 1; display: flex; margin-left: 4px;">
+			<select id="node-input-listId" style="flex: 1;"></select>
+			<input type="text" id="node-input-listIdManual" style="flex: 1; display: none;" placeholder="Enter process ID">
+		</div>
+		<div style="display: flex; flex-direction: row; align-items: center; width: 50px; margin-left: 10px;">
+			<div>Map</div>
+			<input style="margin-top: 0 !important;" type="checkbox" id="node-input-toggleFieldType">
+		</div>
 	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscription-process-get">
 	<p>Returns the complete data of an opt-in process</p>
-
 	<h3>Inputs</h3>
 	<dl class="message-properties">
-	<dt>msg.payload<span class="property-type">object</span></dt>
-	<dd>
-	   Expected object with the following properties:
-	   <ul>
-		   <li><code>listId</code> - (Required) the ID of a opt-in process</li>
-	   </ul>
-	</dd>
+		<dt>msg.payload <span class="property-type">object</span></dt>
+		<dd>
+			Expected object with the following properties:
+			<ul>
+				<li><code>listId</code> - (Required) the ID of an opt-in process</li>
+			</ul>
+		</dd>
 	</dl>
-
 	<h3>Outputs</h3>
 	<dl class="message-properties">
 		<dt>msg.payload <span class="property-type">object</span></dt>
@@ -42,15 +53,13 @@
 				<li><code>{ success: false }</code></li>
 			</ul>
 		</dd>
-
 		<dt>msg.error <span class="property-type">string</span></dt>
 		<dd>An error message explaining why the request failed.</dd>
 	</dl>
-
 	<h3>Node Status</h3>
 	<ul>
-	   <li><strong>Green (dot)</strong> - Opt-in processes fetched successfully.</li>
-	   <li><strong>Red (ring)</strong> - Failed to fetch opt-in processes due to an error.</li>
+		<li><strong>Green (dot)</strong> - Opt-in process fetched successfully.</li>
+		<li><strong>Red (ring)</strong> - Failed to fetch opt-in process due to an error.</li>
 	</ul>
 </script>
 
@@ -60,13 +69,10 @@
 		color: '#DAE1FC',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
-			listId: {
-				value: '',
-				validate: RED.validators.number(),
-			},
-			name: {
-				value: '',
-			},
+			listId: { value: '', validate: RED.validators.number() },
+			manualListId: { value: '', validate: RED.validators.number() },
+			manualFieldEnabled: { value: false },
+			name: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
@@ -75,24 +81,82 @@
 			return this.name || 'Get Opt-in Process';
 		},
 		labelStyle: 'klicktipp_label_style',
-		paletteLabel: 'Get Opt\u2013in Process',
+		paletteLabel: 'Get Opt-in Process',
 		onadd: function () {
 			ktPopulateConfig(this);
 		},
 		oneditprepare: function () {
-			const klicktippInput = $('#node-input-klicktipp');
-			const listIdDropdown = $('#node-input-listId');
-			ktBindDropdownToInput(
-				klicktippInput,
-				listIdDropdown,
-				this.listId,
-				this.klicktipp,
-				`/klicktipp/subscription-processes/${this.id}`,
-			);
+			var self = this;
+			const toggle = $('#node-input-toggleFieldType');
+			const select = $('#node-input-listId');
+			const manualIn = $('#node-input-listIdManual');
+
+			// Bind change event: show manual input if checked; otherwise, show the dropdown.
+			toggle.on('change', function () {
+				if (toggle.prop('checked')) {
+					manualIn.show();
+					select.hide();
+				} else {
+					manualIn.hide();
+					select.show();
+					// If switching to select mode and dropdown isn't populated, bind it.
+					if (!select.children().length) {
+						const klicktippInput = $('#node-input-klicktipp');
+						ktBindDropdownToInput(
+							klicktippInput,
+							select,
+							self.listId,
+							self.klicktipp,
+							`/klicktipp/subscription-processes/${self.id}`,
+						);
+					}
+				}
+			});
+
+			// Function to enforce the display state based on the saved configuration.
+			const forceToggleState = function () {
+				const isManual = self.manualFieldEnabled === true || self.manualFieldEnabled === 'true';
+				toggle.prop('checked', isManual);
+				if (isManual) {
+					manualIn.show();
+					select.hide();
+					manualIn.val(self.manualListId);
+				} else {
+					manualIn.hide();
+					select.show();
+				}
+				toggle.trigger('change');
+			};
+
+			// Only bind the dropdown if manual mode is off.
+			if (!(self.manualFieldEnabled === true || self.manualFieldEnabled === 'true')) {
+				const klicktippInput = $('#node-input-klicktipp');
+				ktBindDropdownToInput(
+					klicktippInput,
+					select,
+					self.listId,
+					self.klicktipp,
+					`/klicktipp/subscription-processes/${self.id}`,
+				);
+			}
+
+			// Enforce the UI state immediately and then after a delay.
+			forceToggleState();
+			setTimeout(forceToggleState, 200);
 		},
-		// When the node editor is saved, capture the selected tagId
 		oneditsave: function () {
-			this.listId = Number($('#node-input-listId').val()); // Save the selected tagId
+			const manualEnabled = $('#node-input-toggleFieldType').is(':checked');
+			this.manualFieldEnabled = manualEnabled;
+			if (manualEnabled) {
+				const manualVal = $('#node-input-listIdManual').val();
+				this.manualListId = manualVal;
+				// Set listId to the manual value so that runtime picks it up.
+				this.listId = manualVal;
+			} else {
+				const selectVal = $('#node-input-listId').val();
+				this.listId = selectVal;
+				this.manualListId = '';
+			}
 		},
 	});
 </script>
