--- a/nodes/subscribers/klicktipp-subscriber-tagged.html
+++ b/nodes/subscribers/klicktipp-subscriber-tagged.html
@@ -74,7 +74,7 @@
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			tagId: {
-				value: 0,
+				value: '',
 				validate: RED.validators.number(),
 			},
 			manualTagId: { value: '' },
