--- a/nodes/subscribers/klicktipp-subscriber-tag.html
+++ b/nodes/subscribers/klicktipp-subscriber-tag.html
@@ -179,9 +179,15 @@
 					.map((s) => Number(s.trim()))
 					.filter((n) => !isNaN(n));
 			} else {
-				const selectVal = $('#node-input-tagId').val() || [];
-				// Ensure we have an array, then convert each value to a number.
-				this.tagId = (Array.isArray(selectVal) ? selectVal : [selectVal]).map((v) => Number(v));
+				const selectVal = $('#node-input-tagId').val();
+				if (!selectVal) {
+					this.tagId = [];
+				} else {
+					this.tagId = (Array.isArray(selectVal) ? selectVal : [selectVal])
+						.filter(v => v !== "")
+						.map(v => Number(v))
+						.filter(n => !isNaN(n));
+				}
 				this.manualTagId = '';
 			}
 		},
