--- a/nodes/subscribers/klicktipp-subscriber-tag.html
+++ b/nodes/subscribers/klicktipp-subscriber-tag.html
@@ -113,31 +113,20 @@
 			const tagManual = $('#node-input-tagIdManual');
 			const toggle = $('#node-input-toggleFieldType');
 
-			// Bind toggle event: if checked, show manual input; otherwise, show dropdown.
-			toggle.on('change', function () {
-				if (toggle.prop('checked')) {
-					tagManual.show();
-					tagDropdown.hide();
-				} else {
-					tagManual.hide();
-					tagDropdown.show();
-					// If switching to select mode and dropdown is empty, bind it.
-					if (!tagDropdown.children().length) {
-						ktBindDropdownToInput(
-							klicktippInput,
-							tagDropdown,
-							self.tagId,
-							self.klicktipp,
-							`/klicktipp/tags/${self.id}`,
-						);
-					}
-				}
-			});
+			// Always bind the dropdown so that its options load regardless of UI state.
+			ktBindDropdownToInput(
+				klicktippInput,
+				tagDropdown,
+				self.tagId,
+				self.klicktipp,
+				`/klicktipp/tags/${self.id}`,
+			);
 
-			// Function to enforce UI state based on saved configuration.
-			const forceToggleState = function () {
+			// Function to update the display state.
+			function updateDisplay() {
 				const isManual = self.manualFieldEnabled === true || self.manualFieldEnabled === 'true';
 				toggle.prop('checked', isManual);
+
 				if (isManual) {
 					tagManual.show();
 					tagDropdown.hide();
@@ -146,23 +135,29 @@
 					tagManual.hide();
 					tagDropdown.show();
 				}
-				toggle.trigger('change');
-			};
-
-			// Bind the dropdown only if manual mode is not active.
-			if (!(self.manualFieldEnabled === true || self.manualFieldEnabled === 'true')) {
-				ktBindDropdownToInput(
-					klicktippInput,
-					tagDropdown,
-					self.tagId,
-					self.klicktipp,
-					`/klicktipp/tags/${self.id}`,
-				);
 			}
 
-			// Enforce the UI state immediately and after a short delay.
-			forceToggleState();
-			setTimeout(forceToggleState, 200);
+			// Bind the toggle change event and update internal state.
+			toggle.on('change', function () {
+				self.manualFieldEnabled = toggle.prop('checked');
+				updateDisplay();
+			});
+
+			// Bind input and change events on the KlickTipp config field.
+			klicktippInput.on('input change', updateDisplay);
+
+			// Use a MutationObserver to catch any re-rendering in the dialog.
+			const observer = new MutationObserver((mutationsList, observer) => {
+				updateDisplay();
+			});
+			const container = $('#dialog-form')[0];
+			if (container) {
+				observer.observe(container, { childList: true, subtree: true });
+			}
+
+			// Enforce the UI state immediately and after a 200ms delay.
+			updateDisplay();
+			setTimeout(updateDisplay, 200);
 
 			// Initialize the typed input for the email field.
 			ktInitializeTypedInput('#node-input-email', '#node-input-emailType', 'str', ['str']);
@@ -184,9 +179,9 @@
 					this.tagId = [];
 				} else {
 					this.tagId = (Array.isArray(selectVal) ? selectVal : [selectVal])
-						.filter(v => v !== "")
-						.map(v => Number(v))
-						.filter(n => !isNaN(n));
+						.filter((v) => v !== '')
+						.map((v) => Number(v))
+						.filter((n) => !isNaN(n));
 				}
 				this.manualTagId = '';
 			}
