--- a/nodes/subscribers/klicktipp-subscriber-tagged.html
+++ b/nodes/subscribers/klicktipp-subscriber-tagged.html
@@ -99,31 +99,20 @@
 			const tagManual = $('#node-input-tagIdManual');
 			const toggle = $('#node-input-toggleFieldType');
 
-			// Bind toggle event: if checked, show manual input; otherwise, show dropdown.
-			toggle.on('change', function () {
-				if (toggle.prop('checked')) {
-					tagManual.show();
-					tagDropdown.hide();
-				} else {
-					tagManual.hide();
-					tagDropdown.show();
-					// If switching to dropdown mode and it's not populated, bind it.
-					if (!tagDropdown.children().length) {
-						ktBindDropdownToInput(
-							klicktippInput,
-							tagDropdown,
-							self.tagId,
-							self.klicktipp,
-							`/klicktipp/tags/${self.id}`,
-						);
-					}
-				}
-			});
+			// Always bind the dropdown so that its options load regardless of UI state.
+			ktBindDropdownToInput(
+				klicktippInput,
+				tagDropdown,
+				self.tagId,
+				self.klicktipp,
+				`/klicktipp/tags/${self.id}`,
+			);
 
-			// Function to enforce the UI state based on saved configuration.
-			const forceToggleState = function () {
+			// Function to update the display state.
+			function updateDisplay() {
 				const isManual = self.manualFieldEnabled === true || self.manualFieldEnabled === 'true';
 				toggle.prop('checked', isManual);
+
 				if (isManual) {
 					tagManual.show();
 					tagDropdown.hide();
@@ -132,23 +121,29 @@
 					tagManual.hide();
 					tagDropdown.show();
 				}
-				toggle.trigger('change');
-			};
-
-			// Bind the dropdown only if manual mode is not active.
-			if (!(self.manualFieldEnabled === true || self.manualFieldEnabled === 'true')) {
-				ktBindDropdownToInput(
-					klicktippInput,
-					tagDropdown,
-					self.tagId,
-					self.klicktipp,
-					`/klicktipp/tags/${self.id}`,
-				);
 			}
 
-			// Enforce the UI state immediately and after a short delay.
-			forceToggleState();
-			setTimeout(forceToggleState, 200);
+			// Bind the toggle change event and update the internal state.
+			toggle.on('change', function () {
+				self.manualFieldEnabled = toggle.prop('checked');
+				updateDisplay();
+			});
+
+			// Bind input and change events on the KlickTipp config field.
+			klicktippInput.on('input change', updateDisplay);
+
+			// Use a MutationObserver to catch any re-rendering in the dialog.
+			const observer = new MutationObserver((mutationsList, observer) => {
+				updateDisplay();
+			});
+			const container = $('#dialog-form')[0];
+			if (container) {
+				observer.observe(container, { childList: true, subtree: true });
+			}
+
+			// Enforce the UI state immediately and again after a 200ms delay.
+			updateDisplay();
+			setTimeout(updateDisplay, 200);
 		},
 		oneditsave: function () {
 			const manualEnabled = $('#node-input-toggleFieldType').is(':checked');
